unpackaged/objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>CERS</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Working</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Complaint Management</fullName>
        <description>Complaint Management Support Process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Account_Type__c</fullName>
        <description>Record Type of the Case&apos;s Contact&apos;s Account</description>
        <formula>Account.RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Azure_DevOps_Work_Item_Id__c</fullName>
        <label>Work Item Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Azure_DevOps_Work_Item_Type__c</fullName>
        <label>Work Item Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CERS_Help_Desk_Escalation_Type__c</fullName>
        <label>Escalation Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Program</fullName>
                </value>
                <value>
                    <fullName>Technical</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CERS_Is_Escalated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CERS Is Escalated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CERS_Manager_Notification_Datetime__c</fullName>
        <label>CERS Manager Notification Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CERS_Resolution_Type__c</fullName>
        <label>Resolution Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Training/Advice Provided</fullName>
                </value>
                <value>
                    <fullName>Cancelled by user</fullName>
                </value>
                <value>
                    <fullName>Could not replicate</fullName>
                </value>
                <value>
                    <fullName>Duplicate record</fullName>
                </value>
                <value>
                    <fullName>No action taken</fullName>
                </value>
                <value>
                    <fullName>Password Reset</fullName>
                </value>
                <value>
                    <fullName>Related Case Resolved</fullName>
                </value>
                <value>
                    <fullName>Entered as Change Request/Enhancement</fullName>
                </value>
                <value>
                    <fullName>Resolved by User</fullName>
                </value>
                <value>
                    <fullName>User Error</fullName>
                </value>
                <value>
                    <fullName>Workaround</fullName>
                </value>
                <value>
                    <fullName>Referred to Regulator</fullName>
                </value>
                <value>
                    <fullName>Correction Made</fullName>
                </value>
                <value>
                    <fullName>Complaint Entered</fullName>
                </value>
                <value>
                    <fullName>Access Granted</fullName>
                </value>
                <value>
                    <fullName>Associated with Complaint</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CERS_Technical_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CERS Technical Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_Type__c</fullName>
        <description>Record Type of the Case&apos;s Contact</description>
        <formula>Contact.RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Has_Contact__c</fullName>
        <formula>NOT(ISBLANK( ContactId ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Thread_Id__c</fullName>
        <formula>&quot;ref:_&quot; &amp; LEFT($Organization.Id,5) &amp; SUBSTITUTE(RIGHT($Organization.Id,11), &quot;0&quot;, &quot;&quot; )&amp; &quot;._&quot; &amp; LEFT(Id,5) &amp; SUBSTITUTE(Left(RIGHT(Id,10), 5), &quot;0&quot;, &quot;&quot;) &amp; RIGHT(Id,5) &amp; &quot;:ref&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Thread Id</label>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Open Cases</label>
    </listViews>
    <listViews>
        <fullName>CERS_Escalated_to_the_Development_Team</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.CERS</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>Escalated</value>
        </filters>
        <filters>
            <field>CERS_Is_Escalated__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CERS_Help_Desk_Escalation_Type__c</field>
            <operation>equals</operation>
            <value>Technical</value>
        </filters>
        <label>CERS Escalated to the Development Team</label>
    </listViews>
    <listViews>
        <fullName>CERS_Technical_Support</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Queue</filterScope>
        <label>CERS Technical Support</label>
        <queue>CERS_Technical_Support</queue>
        <sharedTo>
            <group>CERS_Help_Desk_Technical_Support</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CERS_Technical_Support_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>CERS Technical Support</label>
        <queue>CERS_Technical_Support</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CERS_Technical_Support_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.CERS</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <label>Open CERS Technical Support Cases</label>
    </listViews>
    <listViews>
        <fullName>Complaint_Management_Help_Desk_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>Complaint Management Help Desk</label>
    </listViews>
    <listViews>
        <fullName>Complaint_Management_Support_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Queue</filterScope>
        <label>Complaint Management Support</label>
        <queue>Complaint_Management_Support</queue>
        <sharedTo>
            <group>Complaint_Management_Support</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Complaint_Management_Technical_Support_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Queue</filterScope>
        <label>Complaint Management Technical Support</label>
        <queue>Complaint_Management_Technical_Support</queue>
        <sharedTo>
            <group>Complaint_Management_Technical_Support</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyCases</fullName>
        <filterScope>Mine</filterScope>
        <label>My Cases</label>
    </listViews>
    <listViews>
        <fullName>MyOpenCases</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Open Cases</label>
    </listViews>
    <recordTypes>
        <fullName>CERS</fullName>
        <active>true</active>
        <businessProcess>CERS</businessProcess>
        <label>CERS</label>
    </recordTypes>
    <recordTypes>
        <fullName>Complaint_Management</fullName>
        <active>true</active>
        <businessProcess>Complaint Management</businessProcess>
        <description>Complaint Management Cases</description>
        <label>Complaint Management</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>CERS_Closure_Requires_Type</fullName>
        <active>true</active>
        <errorConditionFormula>AND( TEXT(Status) = &apos;Closed&apos;,ISBLANK(TEXT(CERS_Resolution_Type__c)))</errorConditionFormula>
        <errorMessage>Closure Requires a Resolution Type</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CERS_Escalation_Requires_Type</fullName>
        <active>true</active>
        <errorConditionFormula>AND( TEXT(Status) = &apos;Escalated&apos;,ISBLANK(TEXT(CERS_Help_Desk_Escalation_Type__c)))</errorConditionFormula>
        <errorMessage>Escalation Requires a Type</errorMessage>
    </validationRules>
</CustomObject>